	PR c++/85470 - wrong error with static data member.

* decl.c (check_initializer): Check DECL_INITIALIZED_IN_CLASS_P.
	* typeck2.c (store_init_value): Likewise.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@259571 138bc75d-0d04-0410-961f-82ee72b054a4